terraform/main.tf
data "http" "my_public_ip" {
  url = "https://ifconfig.co/json"
  request_headers = {
    Accept = "application/json"
  }
}

locals {
  ifconfig_co_json = jsondecode(data.http.my_public_ip.body)
}

variable "generated_key_name" {
  type        = string
  default     = "devtool-capstone-key"
  description = "Key-pair generated by Terraform"
}

resource "tls_private_key" "dev_key" {
  algorithm = "RSA"
  rsa_bits  = 4096
}

output "ssh_key" {
  description = "ssh key generated by terraform"
  value       = tls_private_key.dev_key.public_key_openssh
}

resource "aws_key_pair" "generated_key" {
  key_name = var.generated_key_name
  public_key = tls_private_key.dev_key.public_key_openssh

  provisioner "local-exec" {
    command = <<-EOT
      echo '${tls_private_key.dev_key.private_key_pem}' > ./'${var.generated_key_name}'.pem
      chmod 400 ./'${var.generated_key_name}'.pem
    EOT
  }
}

resource "aws_security_group" "allow_ssh" {
  name        = "allow_ssh"
  description = "Allow inbound SSH traffic from my IP"

  ingress {
      description      = "SSH"
      from_port        = 22
      to_port          = 22
      protocol         = "tcp"
      # cidr_blocks      = ["0.0.0.0/0"]
      cidr_blocks      = ["${local.ifconfig_co_json.ip}/32"]
    }

  ingress {
      description      = "For API calls"
      from_port        = 80
      to_port          = 80
      protocol         = "tcp"
      cidr_blocks      = ["0.0.0.0/0"]
    #   cidr_blocks = "${data.external.public_ip.result.ip}/32"
    }
  
  egress {
      from_port        = 0
      to_port          = 0
      protocol         = "-1"
      cidr_blocks      = ["0.0.0.0/0"]
    }

  tags = {
    Name = "capstone-sg"
  }
}

resource "aws_instance" "devtoolCapstoneInstance" {
  ami                    = "ami-0f511ead81ccde020"
  instance_type          = "t2.micro"

  key_name = "${aws_key_pair.generated_key.key_name}"
  vpc_security_group_ids = ["${aws_security_group.allow_ssh.id}"]

  tags = {
    Name = "devtool-capstone"
  }
}
